// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Render must match renderBlueButton() 1`] = `
<button
  className="btn btn-blue"
  onClick={[Function]}
  type="button"
>
  Blue button
</button>
`;

exports[`<Button /> Render must match renderBlueDisabledButton() 1`] = `
<button
  aria-disabled="true"
  className="btn btn-blue"
  onClick={[Function]}
  type="button"
>
  Blue disabled button
</button>
`;

exports[`<Button /> Render must match renderBlueIconButtonLeftAligned() 1`] = `
<button
  className="btn btn-blue"
  onClick={[Function]}
  type="button"
>
  <mock-file
    aria-hidden="true"
    aria-label={null}
    className="mr-2"
    height={16}
    role="img"
    style={
      Object {
        "display": "inline-block",
        "fill": "currentColor",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  />
  Blue icon button
</button>
`;

exports[`<Button /> Render must match renderBlueIconButtonRightAligned() 1`] = `
<button
  className="btn btn-blue"
  onClick={[Function]}
  type="button"
>
  Blue icon button
  <mock-file
    aria-hidden="true"
    aria-label={null}
    className="ml-2"
    height={16}
    role="img"
    style={
      Object {
        "display": "inline-block",
        "fill": "currentColor",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  />
</button>
`;

exports[`<Button /> Render must match renderBlueLargeButton() 1`] = `
<button
  className="btn btn-large btn-blue"
  onClick={[Function]}
  type="button"
>
  Blue large button
</button>
`;

exports[`<Button /> Render must match renderBlueSmallButton() 1`] = `
<button
  className="btn btn-sm btn-blue"
  onClick={[Function]}
  type="button"
>
  Blue small button
</button>
`;

exports[`<Button /> Render must match renderDangerButton() 1`] = `
<button
  className="btn btn-danger"
  onClick={[Function]}
  type="button"
>
  Danger button
</button>
`;

exports[`<Button /> Render must match renderDangerDisabledButton() 1`] = `
<button
  aria-disabled="true"
  className="btn btn-danger"
  onClick={[Function]}
  type="button"
>
  Danger disabled button
</button>
`;

exports[`<Button /> Render must match renderDangerIconButtonLeftAligned() 1`] = `
<button
  className="btn btn-danger"
  onClick={[Function]}
  type="button"
>
  <mock-file
    aria-hidden="true"
    aria-label={null}
    className="mr-2"
    height={16}
    role="img"
    style={
      Object {
        "display": "inline-block",
        "fill": "currentColor",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  />
  Danger icon button
</button>
`;

exports[`<Button /> Render must match renderDangerIconButtonRightAligned() 1`] = `
<button
  className="btn btn-danger"
  onClick={[Function]}
  type="button"
>
  Danger icon button
  <mock-file
    aria-hidden="true"
    aria-label={null}
    className="ml-2"
    height={16}
    role="img"
    style={
      Object {
        "display": "inline-block",
        "fill": "currentColor",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  />
</button>
`;

exports[`<Button /> Render must match renderDangerLargeButton() 1`] = `
<button
  className="btn btn-large btn-danger"
  onClick={[Function]}
  type="button"
>
  Danger large button
</button>
`;

exports[`<Button /> Render must match renderDangerSmallButton() 1`] = `
<button
  className="btn btn-sm btn-danger"
  onClick={[Function]}
  type="button"
>
  Danger small button
</button>
`;

exports[`<Button /> Render must match renderDefaultButton() 1`] = `
<button
  className="btn"
  onClick={[Function]}
  type="button"
>
  Default button
</button>
`;

exports[`<Button /> Render must match renderDefaultDisabledButton() 1`] = `
<button
  aria-disabled="true"
  className="btn"
  onClick={[Function]}
  type="button"
>
  Default disabled button
</button>
`;

exports[`<Button /> Render must match renderDefaultIconButtonLeftAligned() 1`] = `
<button
  className="btn"
  onClick={[Function]}
  type="button"
>
  <mock-file
    aria-hidden="true"
    aria-label={null}
    className="mr-2"
    height={16}
    role="img"
    style={
      Object {
        "display": "inline-block",
        "fill": "currentColor",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  />
  Default icon button
</button>
`;

exports[`<Button /> Render must match renderDefaultIconButtonRightAligned() 1`] = `
<button
  className="btn"
  onClick={[Function]}
  type="button"
>
  Default icon button
  <mock-file
    aria-hidden="true"
    aria-label={null}
    className="ml-2"
    height={16}
    role="img"
    style={
      Object {
        "display": "inline-block",
        "fill": "currentColor",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  />
</button>
`;

exports[`<Button /> Render must match renderDefaultLargeButton() 1`] = `
<button
  className="btn btn-large"
  onClick={[Function]}
  type="button"
>
  Default large button
</button>
`;

exports[`<Button /> Render must match renderDefaultLinkButton() 1`] = `
<a
  className="btn"
  href="#url"
  onClick={[Function]}
  role="button"
>
  Default link button
</a>
`;

exports[`<Button /> Render must match renderDefaultSmallButton() 1`] = `
<button
  className="btn btn-sm"
  onClick={[Function]}
  type="button"
>
  Default small button
</button>
`;

exports[`<Button /> Render must match renderOrangeButton() 1`] = `
<button
  className="btn btn-orange"
  onClick={[Function]}
  type="button"
>
  Orange button
</button>
`;

exports[`<Button /> Render must match renderOrangeDisabledButton() 1`] = `
<button
  aria-disabled="true"
  className="btn btn-orange"
  onClick={[Function]}
  type="button"
>
  Orange disabled button
</button>
`;

exports[`<Button /> Render must match renderOrangeIconButtonLeftAligned() 1`] = `
<button
  className="btn btn-orange"
  onClick={[Function]}
  type="button"
>
  <mock-file
    aria-hidden="true"
    aria-label={null}
    className="mr-2"
    height={16}
    role="img"
    style={
      Object {
        "display": "inline-block",
        "fill": "currentColor",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  />
  Orange icon button
</button>
`;

exports[`<Button /> Render must match renderOrangeIconButtonRightAligned() 1`] = `
<button
  className="btn btn-orange"
  onClick={[Function]}
  type="button"
>
  Orange icon button
  <mock-file
    aria-hidden="true"
    aria-label={null}
    className="ml-2"
    height={16}
    role="img"
    style={
      Object {
        "display": "inline-block",
        "fill": "currentColor",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  />
</button>
`;

exports[`<Button /> Render must match renderOrangeLargeButton() 1`] = `
<button
  className="btn btn-large btn-orange"
  onClick={[Function]}
  type="button"
>
  Orange large button
</button>
`;

exports[`<Button /> Render must match renderOrangeSmallButton() 1`] = `
<button
  className="btn btn-sm btn-orange"
  onClick={[Function]}
  type="button"
>
  Orange small button
</button>
`;

exports[`<Button /> Render must match renderOutlineButton() 1`] = `
<button
  className="btn btn-outline"
  onClick={[Function]}
  type="button"
>
  Outline button
</button>
`;

exports[`<Button /> Render must match renderOutlineDisabledButton() 1`] = `
<button
  aria-disabled="true"
  className="btn btn-outline"
  onClick={[Function]}
  type="button"
>
  Outline disabled button
</button>
`;

exports[`<Button /> Render must match renderOutlineIconButtonLeftAligned() 1`] = `
<button
  className="btn btn-outline"
  onClick={[Function]}
  type="button"
>
  <mock-file
    aria-hidden="true"
    aria-label={null}
    className="mr-2"
    height={16}
    role="img"
    style={
      Object {
        "display": "inline-block",
        "fill": "currentColor",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  />
  Outline icon button
</button>
`;

exports[`<Button /> Render must match renderOutlineIconButtonRightAligned() 1`] = `
<button
  className="btn btn-outline"
  onClick={[Function]}
  type="button"
>
  Outline icon button
  <mock-file
    aria-hidden="true"
    aria-label={null}
    className="ml-2"
    height={16}
    role="img"
    style={
      Object {
        "display": "inline-block",
        "fill": "currentColor",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  />
</button>
`;

exports[`<Button /> Render must match renderOutlineLargeButton() 1`] = `
<button
  className="btn btn-large btn-outline"
  onClick={[Function]}
  type="button"
>
  Outline large button
</button>
`;

exports[`<Button /> Render must match renderOutlineSmallButton() 1`] = `
<button
  className="btn btn-sm btn-outline"
  onClick={[Function]}
  type="button"
>
  Outline small button
</button>
`;

exports[`<Button /> Render must match renderPrimaryButton() 1`] = `
<button
  className="btn btn-primary"
  onClick={[Function]}
  type="button"
>
  Primary button
</button>
`;

exports[`<Button /> Render must match renderPrimaryDisabledButton() 1`] = `
<button
  aria-disabled="true"
  className="btn btn-primary"
  onClick={[Function]}
  type="button"
>
  Primary disabled button
</button>
`;

exports[`<Button /> Render must match renderPrimaryIconButtonLeftAligned() 1`] = `
<button
  className="btn btn-primary"
  onClick={[Function]}
  type="button"
>
  <mock-file
    aria-hidden="true"
    aria-label={null}
    className="mr-2"
    height={16}
    role="img"
    style={
      Object {
        "display": "inline-block",
        "fill": "currentColor",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  />
  Primary icon button
</button>
`;

exports[`<Button /> Render must match renderPrimaryIconButtonRightAligned() 1`] = `
<button
  className="btn btn-primary"
  onClick={[Function]}
  type="button"
>
  Primary icon button
  <mock-file
    aria-hidden="true"
    aria-label={null}
    className="ml-2"
    height={16}
    role="img"
    style={
      Object {
        "display": "inline-block",
        "fill": "currentColor",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  />
</button>
`;

exports[`<Button /> Render must match renderPrimaryLargeButton() 1`] = `
<button
  className="btn btn-large btn-primary"
  onClick={[Function]}
  type="button"
>
  Primary large button
</button>
`;

exports[`<Button /> Render must match renderPrimarySmallButton() 1`] = `
<button
  className="btn btn-sm btn-primary"
  onClick={[Function]}
  type="button"
>
  Primary small button
</button>
`;
